Fix registration dropdown alignment (#62)

--- a/webapp/public/sass/register.sass
+++ b/webapp/public/sass/register.sass
@@ -109,7 +109,7 @@ form
 
             .select
                 width: 100%
-
+                text-align-last: center
                 select
                     width: 100%
                     text-align: center
